# heal-cdes

./: .env.default  .gitignore  CLAUDE.md  LICENSE  Makefile  Pipfile  README.md  Rakefile  Snakefile  cadsr2couchdb.py  cde2csv.py  cde2ids.py  cde2json.py  excel2cde.py  loinc2couchdb.py  nihcde2couchdb.py  pyproject.toml  requirements.txt  validate-forms.py
annotators/bagel/: bagel_annotator.py
annotators/medtype/: medtype-annotator.py
annotators/oger/: oger-annotator.py
annotators/scigraph/: scigraph-api-annotator.py
cdeindexing/: tags.py
comparators/: compare_dug_dirs.py
downloaders/: excel2cde.py  get_heal_cde_list.py  get_heal_cde_taxonomy.py  heal_cde_repo_downloader.py
dug_data_model/: dug_data_model.schema.json
example-cde/nm-assist/: index.md
exporters/: xlsx-exporter.py
generators/: excel2cde.py
heal-cde-repo/: heal_cde_repo_annotator.py  heal_cde_repo_downloader.py
input/: cde-template-locations.yaml
lookups/: id-lookups.py
mappers/: get-mappings-from-dd_output-files.py
mappings/heal-cde-to-id-mappings/: heal-crf-to-id-mappings.csv  heal-crf-to-id-mappings.numbers
schemas/: form.schema.fixed.json  form.schema.json
study-mappings/: download-study-mappings-from-platform-mds.py  extract-study-mappings-from-heal-cde-team-export.py  extract-study-mappings-from-platform-mds.py
summarizers/: extract-study-mappings-from-heal-cde-team-export.py  finalize-json.py
validators/: check-variables-in-forms.py  check_annotated.py  check_json.py  lookup_ids.py
verification/: match-verifier..py  match-verifier.py
(+439 files in other folders)
