[project]
name = "heal-cdes"
version = "0.1.0"
description = "Code for ingesting HEAL CDEs into HEAL Semantic Search"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "biolink-model>=4.3.6",
    "click>=8.1.8",
    "jsonschema>=4.25.1",
    "kgx>=2.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pylightxl>=1.61",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
